--- a/index.html
+++ b/index.html
@@ -2,27 +2,56 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>izitek Haïti - Portail</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Izitek Haïti - Portail</title>
   <style>
-    body { font-family: sans-serif; margin: 0; background: #f5f5f5; }
-    h1 { text-align: center; margin: 20px 0; }
-    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; padding: 20px; }
+    * { box-sizing: border-box; }
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      background: #f5f5f5;
+      padding: 10px;
+    }
+    h1 {
+      text-align: center;
+      margin: 20px 0;
+      font-size: 24px;
+    }
+    .container {
+      max-width: 960px;
+      margin: auto;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+      gap: 15px;
+      padding: 10px;
+    }
     .tile {
-      background: white; padding: 30px; border-radius: 12px;
+      background: white;
+      padding: 20px;
+      border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      text-align: center; text-decoration: none; color: #333;
+      text-align: center;
+      text-decoration: none;
+      color: #333;
+      font-size: 16px;
       transition: transform 0.2s ease;
     }
-    .tile:hover { transform: scale(1.05); }
+    .tile:hover {
+      transform: scale(1.05);
+    }
   </style>
 </head>
 <body>
-  <h1>Bienvenue sur Izitek Haïti</h1>
-  <div class="grid">
-    <a class="tile" href="https://netflix.izitekhaiti.com">🎮 Netflix Profiles</a>
-    <a class="tile" href="https://htlèt.izitekhaiti.com">🥛 Lèt & Produits</a>
-    <a class="tile" href="https://technology.izitekhaiti.com">💻 Services Tech</a>
-    <a class="tile" href="https://blog.izitekhaiti.com">📝 Blog</a>
+  <div class="container">
+    <h1>Bienvenue sur Izitek Haïti</h1>
+    <div class="grid">
+      <a class="tile" href="https://netflix.izitekhaiti.com">🎮 Netflix Profiles</a>
+      <a class="tile" href="https://htlèt.izitekhaiti.com">🥛 Lèt & Produits</a>
+      <a class="tile" href="https://technology.izitekhaiti.com">💻 Services Tech</a>
+      <a class="tile" href="https://blog.izitekhaiti.com">📝 Blog</a>
+    </div>
   </div>
 </body>
 </html>
