--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       <a class="tile" href="https://htlèt.izitekhaiti.com">🥛 Lèt & Produits</a>
       <a class="tile" href="https://technology.izitekhaiti.com">💻 Services Tech</a>
       <a class="tile" href="https://blog.izitekhaiti.com">📝 Blog</a>
+      <a class="tile" href="https://forum.izitekhaiti.com">📝 Forum</a>
     </div>
   </div>
 </body>
