--- a/index.html
+++ b/index.html
@@ -5,50 +5,90 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Izitek Haïti - Portail</title>
   <style>
-    * { box-sizing: border-box; }
-    body { font-family: sans-serif; margin: 0; background: #f5f5f5; padding: 10px; }
-    .container { max-width: 960px; margin: auto; }
+    :root {
+      --bg-color: #f5f5f5;
+      --text-color: #333;
+      --tile-bg: white;
+    }
+
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      background: var(--bg-color);
+      color: var(--text-color);
+      padding: 10px;
+    }
+
+    .container {
+      max-width: 960px;
+      margin: auto;
+    }
+
     .header {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 10px;
+      flex-wrap: wrap;
+      gap: 10px;
     }
-    .lang-switcher {
+
+    .lang-switcher, .dark-button {
       padding: 6px 12px;
       font-size: 14px;
       border-radius: 6px;
       border: 1px solid #ccc;
+      background-color: white;
+      cursor: pointer;
     }
+
+    .dark-button {
+      margin-left: 10px;
+    }
+
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
       gap: 15px;
       padding: 10px;
     }
+
     .tile {
-      background: white;
+      background: var(--tile-bg);
       padding: 20px;
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       text-align: center;
       text-decoration: none;
-      color: #333;
+      color: var(--text-color);
       font-size: 16px;
       transition: transform 0.2s ease;
     }
-    .tile:hover { transform: scale(1.05); }
+
+    .tile:hover {
+      transform: scale(1.05);
+    }
+
+    .dark-mode {
+      --bg-color: #1e1e1e;
+      --text-color: #f0f0f0;
+      --tile-bg: #2c2c2c;
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <div class="header">
       <h1 id="title">Bienvenue sur Izitek Haïti</h1>
-      <select id="language" class="lang-switcher">
-        <option value="fr">Français</option>
-        <option value="en">English</option>
-      </select>
+      <div>
+        <select id="language" class="lang-switcher">
+          <option value="fr">Français</option>
+          <option value="en">English</option>
+        </select>
+        <button id="toggle-dark" class="dark-button">🌙 Mode Nuit</button>
+      </div>
     </div>
+
     <div class="grid">
       <a class="tile" href="https://netflix.izitekhaiti.com" id="link1">🎮 Profils Netflix</a>
       <a class="tile" href="https://htlèt.izitekhaiti.com" id="link2">🥛 Lèt & Produits</a>
@@ -75,6 +115,7 @@
       }
     };
 
+    // Langue
     document.getElementById('language').addEventListener('change', function () {
       const lang = this.value;
       document.getElementById('title').textContent = translations[lang].title;
@@ -82,6 +123,11 @@
       document.getElementById('link2').textContent = translations[lang].link2;
       document.getElementById('link3').textContent = translations[lang].link3;
       document.getElementById('link4').textContent = translations[lang].link4;
+    });
+
+    // Mode nuit
+    document.getElementById('toggle-dark').addEventListener('click', function () {
+      document.body.classList.toggle('dark-mode');
     });
   </script>
 </body>
