--- a/index.html
+++ b/index.html
@@ -43,8 +43,14 @@
     }
 
     .dark-button {
-      margin-left: 10px;
-    }
+  padding: 6px 12px;
+  font-size: 14px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  background-color: white;
+  cursor: pointer;
+}
+
 
     .grid {
       display: grid;
@@ -79,15 +85,16 @@
 <body>
   <div class="container">
     <div class="header">
-      <h1 id="title">Bienvenue sur Izitek Haïti</h1>
-      <div>
-        <select id="language" class="lang-switcher">
-          <option value="fr">Français</option>
-          <option value="en">English</option>
-        </select>
-        <button id="toggle-dark" class="dark-button">🌙 Mode Nuit</button>
-      </div>
-    </div>
+  <h1 id="title">Bienvenue sur Izitek Haïti</h1>
+  <div style="display: flex; gap: 10px;">
+    <select id="language" class="lang-switcher">
+      <option value="fr">Français</option>
+      <option value="en">English</option>
+    </select>
+    <button id="toggle-dark" class="dark-button">🌙 Mode Nuit</button>
+  </div>
+</div>
+
 
     <div class="grid">
       <a class="tile" href="https://netflix.izitekhaiti.com" id="link1">🎮 Profils Netflix</a>
