--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Izitek Haïti - Portail</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     :root {
       --bg-color: #f5f5f5;
@@ -43,14 +44,8 @@
     }
 
     .dark-button {
-  padding: 6px 12px;
-  font-size: 14px;
-  border-radius: 6px;
-  border: 1px solid #ccc;
-  background-color: white;
-  cursor: pointer;
-}
-
+      margin-left: 10px;
+    }
 
     .grid {
       display: grid;
@@ -71,6 +66,10 @@
       transition: transform 0.2s ease;
     }
 
+    .tile i {
+      margin-right: 8px;
+    }
+
     .tile:hover {
       transform: scale(1.05);
     }
@@ -85,22 +84,29 @@
 <body>
   <div class="container">
     <div class="header">
-  <h1 id="title">Bienvenue sur Izitek Haïti</h1>
-  <div style="display: flex; gap: 10px;">
-    <select id="language" class="lang-switcher">
-      <option value="fr">Français</option>
-      <option value="en">English</option>
-    </select>
-    <button id="toggle-dark" class="dark-button">🌙 Mode Nuit</button>
-  </div>
-</div>
-
+      <h1 id="title">Bienvenue sur Izitek Haïti</h1>
+      <div style="display: flex; gap: 10px;">
+        <select id="language" class="lang-switcher">
+          <option value="fr">Français</option>
+          <option value="en">English</option>
+        </select>
+        <button id="toggle-dark" class="dark-button">🌙 Mode Nuit</button>
+      </div>
+    </div>
 
     <div class="grid">
-      <a class="tile" href="https://netflix.izitekhaiti.com" id="link1">🎮 Profils Netflix</a>
-      <a class="tile" href="https://htlèt.izitekhaiti.com" id="link2">🥛 Lèt & Produits</a>
-      <a class="tile" href="https://technology.izitekhaiti.com" id="link3">💻 Services Tech</a>
-      <a class="tile" href="https://blog.izitekhaiti.com" id="link4">📝 Blog</a>
+      <a class="tile" href="https://netflix.izitekhaiti.com" id="link1">
+        <i class="fas fa-film"></i> Profils Netflix
+      </a>
+      <a class="tile" href="https://htlèt.izitekhaiti.com" id="link2">
+        <i class="fas fa-cart-shopping"></i> Lèt & Produits
+      </a>
+      <a class="tile" href="https://technology.izitekhaiti.com" id="link3">
+        <i class="fas fa-laptop-code"></i> Services Tech
+      </a>
+      <a class="tile" href="https://blog.izitekhaiti.com" id="link4">
+        <i class="fas fa-pen-nib"></i> Blog
+      </a>
     </div>
   </div>
 
@@ -108,17 +114,17 @@
     const translations = {
       fr: {
         title: "Bienvenue sur Izitek Haïti",
-        link1: "🎮 Profils Netflix",
-        link2: "🥛 Lèt & Produits",
-        link3: "💻 Services Tech",
-        link4: "📝 Blog"
+        link1: "Profils Netflix",
+        link2: "Lèt & Produits",
+        link3: "Services Tech",
+        link4: "Blog"
       },
       en: {
         title: "Welcome to Izitek Haiti",
-        link1: "🎮 Netflix Profiles",
-        link2: "🥛 Milk & Products",
-        link3: "💻 Tech Services",
-        link4: "📝 Blog"
+        link1: "Netflix Profiles",
+        link2: "Milk & Products",
+        link3: "Tech Services",
+        link4: "Blog"
       }
     };
 
@@ -126,10 +132,10 @@
     document.getElementById('language').addEventListener('change', function () {
       const lang = this.value;
       document.getElementById('title').textContent = translations[lang].title;
-      document.getElementById('link1').textContent = translations[lang].link1;
-      document.getElementById('link2').textContent = translations[lang].link2;
-      document.getElementById('link3').textContent = translations[lang].link3;
-      document.getElementById('link4').textContent = translations[lang].link4;
+      document.getElementById('link1').lastChild.textContent = ' ' + translations[lang].link1;
+      document.getElementById('link2').lastChild.textContent = ' ' + translations[lang].link2;
+      document.getElementById('link3').lastChild.textContent = ' ' + translations[lang].link3;
+      document.getElementById('link4').lastChild.textContent = ' ' + translations[lang].link4;
     });
 
     // Mode nuit
