--- a/index.html
+++ b/index.html
@@ -136,12 +136,31 @@
       document.getElementById('link2').lastChild.textContent = ' ' + translations[lang].link2;
       document.getElementById('link3').lastChild.textContent = ' ' + translations[lang].link3;
       document.getElementById('link4').lastChild.textContent = ' ' + translations[lang].link4;
+      localStorage.setItem('lang', lang);
     });
 
     // Mode nuit
     document.getElementById('toggle-dark').addEventListener('click', function () {
       document.body.classList.toggle('dark-mode');
+      const isDark = document.body.classList.contains('dark-mode');
+      localStorage.setItem('theme', isDark ? 'dark' : 'light');
     });
+
+    // Charger les préférences sauvegardées
+    const savedTheme = localStorage.getItem('theme');
+    if (savedTheme === 'dark') {
+      document.body.classList.add('dark-mode');
+    }
+
+    const savedLang = localStorage.getItem('lang');
+    if (savedLang && translations[savedLang]) {
+      document.getElementById('language').value = savedLang;
+      document.getElementById('title').textContent = translations[savedLang].title;
+      document.getElementById('link1').lastChild.textContent = ' ' + translations[savedLang].link1;
+      document.getElementById('link2').lastChild.textContent = ' ' + translations[savedLang].link2;
+      document.getElementById('link3').lastChild.textContent = ' ' + translations[savedLang].link3;
+      document.getElementById('link4').lastChild.textContent = ' ' + translations[savedLang].link4;
+    }
   </script>
 </body>
 </html>
