--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       --tile-bg: white;
     }
 
+    .tile:hover {
+  transform: scale(1.05);
+  box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+    }
     body {
       font-family: sans-serif;
       margin: 0;
